Added more library for future use and gitignore update

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.2
 	adafruit/Adafruit Unified Sensor@^1.1.4
 	openslab-osu/SSLClient@^1.6.11
+	seeed-studio/Ethernet_Shield_W5200@^1.0.0
