Added Ethernet, SSL, MQTT capabilities

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,6 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.2
 	adafruit/Adafruit Unified Sensor@^1.1.4
 	openslab-osu/SSLClient@^1.6.11
-	seeed-studio/Ethernet_Shield_W5200@^1.0.0
+	arduino-libraries/Ethernet@^2.0.0
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.18.0
