--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:due]
+monitor_speed = 115200
 platform = atmelsam
 board = due
 framework = arduino
