--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,4 @@ lib_deps =
 	arduino-libraries/Ethernet@^2.0.0
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.18.0
-	powerbroker2/SafeString@4.0.4
+	powerbroker2/SafeString@^4.1.3
