SSL removed as it casues mqtt connection instability
a limitation

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,3 +22,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.18.0
 	powerbroker2/SafeString@^4.1.4
+	arduino-libraries/Ethernet@^2.0.0
